# IN204_projet_IA_game

./: .gitignore  Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Makefile  Player.cpp  Player.h  README.md  Space_inv_tuto.vcxproj  Space_inv_tuto.vcxproj.filters  main.cpp
Images/: readme.md
Sources/: CMakeLists.txt  Enemy.cpp  EnemyRock.cpp  Fireball.cpp  Game.cpp  GameBis.cpp  Models.h  Player.cpp  README.md  _CMakeLists.txt  main.cpp  main.py  main_test.cpp  ppo_torch.cpp  ppo_torch.py  test.cpp
Sources/headers/: Enemy.h  EnemyRock.h  Fireball.cpp  Fireball.h  Game.h  GameBis.h  Player.h
Sources/tmp/ppo/: actor_torch_ppo.pt  critic_torch_ppo.pt
Sources/tmp/ppopy/: actor_torch_ppo  critic_torch_ppo
